# exercises

./: LICENSE
sbds/: .gitignore  CMakeLists.txt  README.md
sbds/apps/: CMakeLists.txt  array.cpp  basic_recursion.cpp  exponent_recursion.cpp  factorial_recursion.cpp  fibonacci.cpp  taylor_series_recursion.cpp  tree_recursion.cpp
sbds/include/sbds/: array.h
