add_executable(basic_recursion basic_recursion.cpp)
add_executable(tree_recursion tree_recursion.cpp)
add_executable(factorial_recursion factorial_recursion.cpp)
add_executable(exponent_recursion exponent_recursion.cpp)
add_executable(taylor_series_recursion taylor_series_recursion.cpp) 
add_executable(fibonacci fibonacci.cpp)
add_executable(array array.cpp)
target_link_libraries(array sbds_module)